add ES5/ESnext switcher on about page

--- a/layouts/about.hbs
+++ b/layouts/about.hbs
@@ -44,6 +44,84 @@
         </div>
     </div>
 
+    <style>
+        .es-switcher > p.active, .es-switcher > p:hover {
+            color: #FFF;
+            background-color: rgb(51, 51, 51);
+            border-color: rgb(51, 51, 51);
+        }
+        .es-switcher > p {
+            display: inline-block;
+            margin: 0px;
+            cursor: pointer;
+            padding: 0em 21px;
+            border-style: solid;
+            border-color: rgb(255, 255, 255);
+            border-width: 3px;
+            background-color: rgb(238, 238, 238);
+            border-top-right-radius: 3px;
+            border-top-left-radius: 3px;
+        }
+        .es-switcher > pre {
+            border-top-left-radius: 0px !important;
+            margin: 0px;
+        }
+    </style>
+
+    <script>
+var esNextText = 'Modern JavaScript:'
+var es5Text = 'ES5:'
+
+function nextSiblingMatch (e, name, text) {
+  var sib = e.nextSibling
+  while (sib) {
+    if (sib.nodeType == 1) {
+      if (sib.nodeName == name && (!text || sib.textContent == text))
+        return sib
+      return null
+    }
+    sib = sib.nextSibling
+  }
+}
+
+Array.prototype.slice.call(document.querySelectorAll('p'))
+  .filter(function (p) { return p.textContent == esNextText })
+  .map(function (esNextP) {
+    var esNextPre = nextSiblingMatch(esNextP, 'PRE')
+    if (!esNextPre) return null
+    var es5P = nextSiblingMatch(esNextPre, 'P')
+    if (!es5P) return null
+    var es5Pre = nextSiblingMatch(es5P, 'PRE')
+    if (!es5Pre) return null
+    return { esNextP: esNextP, esNextPre: esNextPre, es5P: es5P, es5Pre: es5Pre }
+  })
+  .filter(Boolean)
+  .forEach(function (block) {
+    var div = document.createElement('div')
+    div.className = 'es-switcher'
+    block.esNextP.parentElement.insertBefore(div, block.esNextP)
+    block.esNextP.textContent = esNextText.replace(/:$/, '')
+    block.es5P.textContent = es5Text.replace(/:$/, '')
+    block.esNextP.className = 'active'
+    div.appendChild(block.esNextP)
+    div.appendChild(block.es5P)
+    div.appendChild(block.esNextPre)
+    div.appendChild(block.es5Pre)
+    block.es5Pre.style.display = 'none'
+    block.esNextP.addEventListener('click', function () {
+      block.esNextPre.style.display = 'block'
+      block.es5Pre.style.display = 'none'
+      block.esNextP.className = 'active'
+      block.es5P.className = ''
+    })
+    block.es5P.addEventListener('click', function () {
+      block.esNextPre.style.display = 'none'
+      block.es5Pre.style.display = 'block'
+      block.esNextP.className = ''
+      block.es5P.className = 'active'
+    })
+  })
+    </script>
     {{> footer }}
 </body>
 </html>
